--- a/conda.env.yml
+++ b/conda.env.yml
@@ -3,7 +3,7 @@ channels:
   - defaults
 dependencies:
   - numpy
-  - numba
+  - cython
   - python=3.7
   - sphinx
 prefix: C:\Users\t.mazza\.conda\envs\pagral
