--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,7 @@ install:
   - "python -m pip install --upgrade pip"
   - "pip install wheel setuptools Cython"
 
+build: off
 build_script:
   # Build the Cython extension
   - "python setup.py build_ext --inplace"
