--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
-os: Visual Studio 2019
+os: windows
+image: Visual Studio 2019
 
 environment:
   global:
@@ -27,7 +28,7 @@ install:
 build: off
 build_script:
   # Build the Cython extension
-  - "python setup.py build_ext --inplace"
+  - python setup.py build_ext --inplace
 
 test_script:
   # Run the project tests and store results in .xml log
