--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,9 @@ install:
   - "python -m pip install --upgrade pip"
   - "pip install wheel setuptools Cython"
 
-build: off
+build:
+  - 'Script'
+
 build_script:
   # Build the Cython extension
   - python setup.py build_ext --inplace
