--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ install:
   - "pip install wheel setuptools Cython"
 
 build:
-  - 'Script'
+  - Script
 
 build_script:
   # Build the Cython extension
