--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,9 @@ environment:
       PYTHON_VERSION: "3.7.8"
       PYTHON_ARCH: "64"
 
+init:
+  - ps: iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
+
 install:
   - "SET PATH=%PYTHON%;%PYTHON%\\Scripts;%PATH%"
 
