--- a/.travis.yml
+++ b/.travis.yml
@@ -21,13 +21,13 @@ install:
   - "SET PATH=%PYTHON%;%PYTHON%\\Scripts;%PATH%"
 
   # Check that we have the expected version and architecture for Python
-  - "python --version"
-  - "python -c \"import struct; print(struct.calcsize('P') * 8)\""
+  - cmd: python --version
+  - cmd: python -c \"import struct; print(struct.calcsize('P') * 8)\"
 
   # Upgrade to the latest version of pip to avoid it displaying warnings
   # about it being out of date.
-  - "python -m pip install --upgrade pip"
-  - "pip install wheel setuptools Cython"
+  - cmd: python -m pip install --upgrade pip
+  - cmd: pip install wheel setuptools Cython
 
 build: off
 
