--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@
 
 environment:
   APPVEYOR_RDP_PASSWORD: AgattaPowel1979#
-  global:
+  # global:
     # SDK v7.0 MSVC Express 2008's SetEnv.cmd script will fail if the
     # /E:ON and /V:ON options are not enabled in the batch script interpreter
     # See: http://stackoverflow.com/a/13751649/163740
@@ -14,8 +14,8 @@ environment:
       PYTHON_VERSION: "3.7.8"
       PYTHON_ARCH: "64"
 
-init:
-  - ps: iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
+# init:
+#   - ps: iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
 
 install:
   - "SET PATH=%PYTHON%;%PYTHON%\\Scripts;%PATH%"
