--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,13 @@
 # os: windows
-# image: Visual Studio 2019
+
+# version format
+version: 1.0.{build}
+
+branches:
+  only:
+    - master
+
+image: Visual Studio 2019
 
 environment:
   APPVEYOR_RDP_PASSWORD: AgattaPowel1979#
