--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -1,55 +1,45 @@
 package:
-  name: pyntacle
-  version: "1.3"
+  name: pagral
+  version: "1.0"
 
 source:
-  path: Z:\tom\pyntacle_release\windows_release\pyntacle_release
+  path: C:\Users\t.mazza\Desktop\CSS-Bioinformatics\pagral_project
 
 build:
   number: 0
-  entry_points:
-    - pyntacle = pyntacle.pyntacle:App
+#  entry_points:
+#    - pyntacle = pyntacle.pyntacle:App
  
 requirements:
   host:
-    - python ==3.7
-    - pip
-    - setuptools
     - numpy
-    - colorama
-    
+    - cython
+    - python=3.7
+
   build:
     - pip
     - python ==3.7
     - distlib
     - setuptools
     - numpy
-    - colorama
-    
+    - cython
+
   run:
     - python ==3.7
     - pip
     - setuptools
     - numpy
-    - pandas
-    - numba
-    - seaborn
-    - colorama
-    - psutil
-    - libiconv
-    - ordered-set
-    - xlsxwriter
-    - cudatoolkit ==9.0
-    - python-igraph
+    - cython
+    - sphinx
 
 test:
   imports:
-    - pyntacle
-  commands:
-    - pyntacle -h
+    - pagral
+#  commands:
+#    - pyntacle -h
     
 about:
-  home: https://github.com/mazzalab/pyntacle
-  summary: A Python software package for network analysis based on non canonical metrics and HPC comupting
+  home: https://github.com/mazzalab/pagral
+  summary: A PArallel python GRAph Library
   license: GPL3
-  license_file: LICENSE.txt
+#  license_file: LICENSE.txt
