--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,6 +11,8 @@ image: Visual Studio 2019
 
 environment:
   APPVEYOR_RDP_PASSWORD: AgattaPowel1979#
+  PYTHON_VERSION: 3.7
+
   # global:
     # SDK v7.0 MSVC Express 2008's SetEnv.cmd script will fail if the
     # /E:ON and /V:ON options are not enabled in the batch script interpreter
@@ -18,8 +20,7 @@ environment:
     # CMD_IN_ENV: "cmd /E:ON /V:ON /C .\\appveyor\\run_with_env.cmd"
 
   matrix:
-    - PYTHON_VERSION: 3.7
-    - MINICONDA: C:\Miniconda3
+    - MINICONDA: "C:\Miniconda3"
 #    - PYTHON: "C:\\Python37-x64"
 #      PYTHON_VERSION: "3.7.8"
 #      PYTHON_ARCH: "64"
