--- a/appveyor.yml
+++ b/appveyor.yml
@@ -20,7 +20,7 @@ environment:
     # CMD_IN_ENV: "cmd /E:ON /V:ON /C .\\appveyor\\run_with_env.cmd"
 
   matrix:
-    - MINICONDA: "C:\Miniconda3"
+    - MINICONDA: "C:\\Miniconda3"
 #    - PYTHON: "C:\\Python37-x64"
 #      PYTHON_VERSION: "3.7.8"
 #      PYTHON_ARCH: "64"
