--- a/appveyor.yml
+++ b/appveyor.yml
@@ -20,10 +20,9 @@ environment:
     # CMD_IN_ENV: "cmd /E:ON /V:ON /C .\\appveyor\\run_with_env.cmd"
 
   matrix:
-    - MINICONDA: "C:\\Miniconda3"
-#    - PYTHON: "C:\\Python37-x64"
-#      PYTHON_VERSION: "3.7.8"
-#      PYTHON_ARCH: "64"
+    - MINICONDA: "C:\\Miniconda37-x64"
+      PYTHON_VERSION: "3.7.4"
+      PYTHON_ARCH: "64"
 
 init:
   -  cmd: ECHO %PYTHON_VERSION% %MINICONDA%
