--- a/appveyor.yml
+++ b/appveyor.yml
@@ -19,15 +19,16 @@ environment:
     # CMD_IN_ENV: "cmd /E:ON /V:ON /C .\\appveyor\\run_with_env.cmd"
 
   matrix:
-    - MINICONDA: "C:\\Miniconda37"
+    - MINICONDA: "C:\\Miniconda37-64"
       PYTHON_VERSION: "3.7.4"
-      # PYTHON_ARCH: "64"
+      PYTHON_ARCH: "64"
 
 init:
   -  cmd: ECHO %PYTHON_VERSION% %MINICONDA%
 #   - ps: iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
 
 install:
+  - cmd: %MINICONDA%\Scripts\activate.bat
   - cmd: set PATH=%MINICONDA%;%MINICONDA%\\Scripts;%PATH%
   - cmd: conda config --set always_yes yes --set changeps1 no
   - cmd: conda update -q conda
