--- a/appveyor.yml
+++ b/appveyor.yml
@@ -28,7 +28,7 @@ init:
 #   - ps: iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
 
 install:
-  - cmd: %MINICONDA%\Scripts\activate.bat
+  - cmd: %MINICONDA%\\Scripts\\activate.bat
   - cmd: set PATH=%MINICONDA%;%MINICONDA%\\Scripts;%PATH%
   - cmd: conda config --set always_yes yes --set changeps1 no
   - cmd: conda update -q conda
