--- a/appveyor.yml
+++ b/appveyor.yml
@@ -19,7 +19,7 @@ environment:
     # CMD_IN_ENV: "cmd /E:ON /V:ON /C .\\appveyor\\run_with_env.cmd"
 
   matrix:
-    - MINICONDA: "C:\\Miniconda37-64"
+    - MINICONDA: "C:\\Miniconda37-x64"
       PYTHON_VERSION: "3.7.4"
       PYTHON_ARCH: "64"
 
@@ -29,16 +29,17 @@ init:
 
 install:
   - cmd: set PATH=%MINICONDA%;%MINICONDA%\\Scripts;%PATH%
+  - cmd: activate.bat
   - cmd: conda config --set always_yes yes --set changeps1 no
   - cmd: conda update -q conda
   - cmd: conda info -a
   - cmd: conda config --add channels conda-forge
-#  - cmd: conda config --add channels anaconda
+  - cmd: conda config --add channels anaconda
   - cmd: conda install -c conda-forge setuptools wheel conda-build anaconda-client conda-verify cython -y
-#  - cmd: conda install -c anaconda numpy -y
+  - cmd: conda install -c anaconda numpy -y
 #  - cmd: conda create -q -n pagral python=%PYTHON_VERSION% Cython numpy conda-build anaconda-client conda-verify
 #  - conda activate pagral
-  - pip install numpy
+#  - pip install numpy
 
 #  - cmd: SET PATH=%PYTHON%;%PYTHON%\\Scripts;%PATH%
 #  - cmd: python --version
