--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -6,13 +6,13 @@ source:
   path: C:\projects\pagral
 
 build:
-  number: 0
+  number: 1.0
 #  entry_points:
 #    - pyntacle = pyntacle.pyntacle:App
  
 requirements:
   host:
-    - numpy
+    - numpy=1.19
     - cython
     - python=3.7
 
@@ -21,14 +21,14 @@ requirements:
     - python ==3.7
     - distlib
     - setuptools
-    - numpy
+    - numpy=1.19
     - cython
 
   run:
     - python ==3.7
     - pip
     - setuptools
-    - numpy
+    - numpy=1.19
     - cython
 
 test:
