--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -1,9 +1,15 @@
+{% set data = load_setup_py_data(setup_file='../setup.py', from_recipe_dir=True) %}
+
 package:
   name: pagral
-  version: "1.0"
+  version: {{ data.get('version') }}
+
+#app:
+#  icon: icon_64x64.png
 
 source:
-  path: C:\projects\pagral
+  git_url: https://github.com/mazzalab/pagral.git
+  # path: C:\projects\pagral
 
 build:
   number: 1.0
@@ -42,4 +48,7 @@ about:
   home: https://github.com/mazzalab/pagral
   summary: A PArallel python GRAph Library
   license: GPL3
+  dev_url: https://github.com/mazzalab/pagral
+  doc_url: https://pypi.python.org/pypi/pagral
+  doc_source_url: https://github.com/mazzalab/pagral/blob/master/README.rst
 #  license_file: LICENSE.txt
