--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -2,7 +2,7 @@
 
 package:
   name: pagral
-  version: {{ data.get('version') }}
+  version: {{ data.get('__version__') }}
 
 #app:
 #  icon: icon_64x64.png
