--- a/appveyor.yml
+++ b/appveyor.yml
@@ -74,8 +74,10 @@ test_script:
 after_test:
   # If tests are successful, create binary packages for the project.
   # - cmd: python setup.py bdist_wheel clean --all
-  - cmd: conda build --quiet -c conda-forge conda-recipe
-  - cmd: conda convert -f --platform all dist\*.tar.bz2 -o outputdir\
+  - cmd: mkdir conda_dist
+  - cmd: conda build --quiet -c conda-forge conda-recipe --output-folder conda_dist
+  - cmd: ECHO %PKG_BUILD_STRING%
+  - cmd: conda convert -f --platform all conda_dist\win-32\pagral-*.tar.bz2 -o conda_dist\
   # - "python setup.py bdist_wininst"
   # - "python setup.py bdist_msi"
   - ps: "ls dist"
