cpp compilation test

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -77,7 +77,7 @@ after_test:
   - cmd: conda build --quiet -c conda-forge conda-recipe --output-folder conda_dist
   # - "python setup.py bdist_wininst"
   # - "python setup.py bdist_msi"
-  - ps: "ls dist"
+  - ps: "ls conda_dist"
 
 artifacts:
   # Archive the generated packages in the ci.appveyor.com build report.
