--- a/appveyor.yml
+++ b/appveyor.yml
@@ -68,7 +68,7 @@ test_script:
 
 after_test:
   # If tests are successful, create binary packages for the project.
-  - cmd: python setup.py bdist_wheel --b pypi_dist clean --all
+  - cmd: python setup.py bdist_wheel -b pypi_dist clean --all
   - ps: "ls dist"
   - cmd: conda build --quiet -c conda-forge conda-recipe --output-folder conda_dist
   # - "python setup.py bdist_wininst"
@@ -84,8 +84,8 @@ artifacts:
 #  - TODO: upload the content of dist/*.whl to a public wheelhouse
 #
 
-on_finish:
-  - ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
+#on_finish:
+  #- ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
   # Upload test results to AppVeyor
   #  - ps: |
   #    # this uploads nosetests.xml produced in test_script step
