--- a/appveyor.yml
+++ b/appveyor.yml
@@ -26,9 +26,9 @@ environment:
     # CMD_IN_ENV: "cmd /E:ON /V:ON /C .\\appveyor\\run_with_env.cmd"
 
   matrix:
-    - MINICONDA: "C:\\Miniconda37"
-      PYTHON_VERSION: "3.7.4"
-      PYTHON_ARCH: "32"
+    # - MINICONDA: "C:\\Miniconda37"
+    #  PYTHON_VERSION: "3.7.4"
+    #  PYTHON_ARCH: "32"
     - MINICONDA: "C:\\Miniconda37-x64"
       PYTHON_VERSION: "3.7.4"
       PYTHON_ARCH: "64"
@@ -48,8 +48,8 @@ install:
   - cmd: conda config --set show_channel_urls true
   - cmd: conda config --add channels conda-forge
   - cmd: conda config --add channels anaconda
-  - cmd: conda install -c conda-forge setuptools wheel conda-build anaconda-client conda-verify cython --yes --quiet
-  - cmd: conda install -c anaconda numpy=1.19.1 --yes --quiet
+  - cmd: conda install -c conda-forge setuptools wheel conda-build anaconda-client conda-verify cython numpy=1.19.1 --yes --quiet
+  # - cmd: conda install -c anaconda numpy=1.19.1 --yes --quiet
 
 build: off
 
