--- a/appveyor.yml
+++ b/appveyor.yml
@@ -47,7 +47,7 @@ install:
   # - cmd: conda info -a
   - cmd: conda config --set show_channel_urls true
   - cmd: conda config --add channels conda-forge
-  - cmd: conda config --add channels anaconda
+  # - cmd: conda config --add channels anaconda
   - cmd: conda install -c conda-forge setuptools wheel conda-build anaconda-client conda-verify cython numpy=1.19.1 --yes --quiet
   # - cmd: conda install -c anaconda numpy=1.19.1 --yes --quiet
 
@@ -75,7 +75,7 @@ after_test:
 
 artifacts:
   # Archive the generated packages in the ci.appveyor.com build report.
-  - path: conda_dist\win-32\*.tar.bz2
+  - path: conda_dist\**\*.tar.bz2
   - path: pypi_dist\*.whl
 
 #on_success:
