[build] fix x64 linux os

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -53,7 +53,9 @@ install:
   # - cmd: conda info -a
   - conda config --set show_channel_urls true
   - conda config --add channels conda-forge
-  - conda install -c conda-forge setuptools wheel conda-build anaconda-client conda-verify cython numpy=1.19.1 --yes --quiet
+  - conda config --add channels anaconda
+  - conda install -c conda-forge setuptools wheel conda-build anaconda-client conda-verify cython --yes --quiet
+  - conda install -c anaconda numpy=1.19.1 --yes --quiet
 
 build: off
 
