--- a/appveyor.yml
+++ b/appveyor.yml
@@ -39,11 +39,11 @@ install:
 
   - cmd: set PATH=%MINICONDA%;%MINICONDA%\\Scripts;%WINKITS%;%PATH%
   - sh: export PATH=$MINICONDA:$MINICONDA/bin:$PATH
-  - sh: conda init
 
   - cmd: activate.bat
   # - sh: source $MINICONDA/bin/activate
-  - sh: conda list
+  - sh: ls $MINICONDA -R
+  - sh: conda init
 
   - cmd: set PYTHONUNBUFFERED=1
   - sh: PYTHONUNBUFFERED=1
@@ -88,7 +88,9 @@ artifacts:
 #
 
 on_finish:
-  - ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
+  - sh: export APPVEYOR_SSH_BLOCK=true
+  - sh: curl -sflL 'https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-ssh.sh' | bash -e -
+  # - ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
   # Upload test results to AppVeyor
   #  - ps: |
   #    # this uploads nosetests.xml produced in test_script step
