--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -23,7 +23,7 @@ requirements:
     - python==3.7
 
   build:
-    - {{ compiler('c') }}
+    - {{ compiler('cxx') }}
     - pip
     - python ==3.7
     - distlib
