--- a/appveyor.yml
+++ b/appveyor.yml
@@ -32,21 +32,14 @@ environment:
     - APPVEYOR_BUILD_WORKER_IMAGE: macOS
       platform: x64
       MINICONDA: /home/appveyor/Miniconda37-x64
+      MINICONDA_REPO: https://repo.anaconda.com/miniconda/Miniconda3-py37_4.8.3-MacOSX-x86_64.sh
 
 # init:
 #   -  cmd: ECHO %PYTHON_VERSION% %MINICONDA%
 #   - ps: iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
 
 install:
-  - ps: |
-      if (-Not $isWindows) {
-        if (isLinux){
-          wget https://repo.anaconda.com/miniconda/Miniconda3-py37_4.8.3-Linux-x86_64.sh -O ~/miniconda.sh
-        } else{
-          wget https://repo.anaconda.com/miniconda/Miniconda3-py37_4.8.3-MacOSX-x86_64.sh -O ~/miniconda.sh
-        }
-      }
-# - sh: wget https://repo.anaconda.com/miniconda/Miniconda3-py37_4.8.3-Linux-x86_64.sh -O ~/miniconda.sh
+  - sh: wget $MINICONDA_REPO -O ~/miniconda.sh
   - sh: bash ~/miniconda.sh -b -p $MINICONDA
 
   - cmd: set PATH=%MINICONDA%;%MINICONDA%\\Scripts;%WINKITS%;%PATH%
