--- a/appveyor.yml
+++ b/appveyor.yml
@@ -35,17 +35,16 @@ environment:
       MINICONDA: /home/appveyor/Miniconda37-x64
       MINICONDA_REPO: https://repo.anaconda.com/miniconda/Miniconda3-py37_4.8.3-MacOSX-x86_64.sh
 
-# init:
+init:
+  - ps: |
+      if ($isMacOS) {
+        brew install wget
+      }
 #   -  cmd: ECHO %PYTHON_VERSION% %MINICONDA%
 #   - ps: iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
 
 install:
-  - ps: |
-      if ($isLinux) {
-        wget $MINICONDA_REPO -O ~/miniconda.sh
-      } elseif ($isMacOS){
-        curl -o ~/miniconda.sh $MINICONDA_REPO
-      }
+  - sh: wget $MINICONDA_REPO -O ~/miniconda.sh
   - sh: bash ~/miniconda.sh -b -p $MINICONDA
 
   - cmd: set PATH=%MINICONDA%;%MINICONDA%\\Scripts;%WINKITS%;%PATH%
