--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -31,6 +31,9 @@ requirements:
     - numpy==1.19.1
     - cython
 
+    script_env:
+      - APPVEYOR_BUILD_VERSION
+
   run:
     - python ==3.7
     - numpy==1.19.1
