--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -1,4 +1,4 @@
-#{% set data = load_setup_py_data(setup_file='../setup.py', from_recipe_dir=True) %}
+{% set data = load_setup_py_data(setup_file='../setup.py', from_recipe_dir=True) %}
 
 package:
   name: pagral
@@ -11,8 +11,8 @@ source:
   git_url: https://github.com/mazzalab/pagral.git
   # path: C:\projects\pagral
 
-# build:
-#  number: version
+build:
+  number: version
 #  entry_points:
 #    - pyntacle = pyntacle.pyntacle:App
  
@@ -32,6 +32,9 @@ requirements:
     - cython
 
   run:
+    script_env:
+      - APPVEYOR_BUILD_VERSION
+
     - python ==3.7
     - numpy==1.19.1
 
