--- a/appveyor.yml
+++ b/appveyor.yml
@@ -58,29 +58,27 @@ install:
   - conda update -q conda
   - conda config --set show_channel_urls true
   - conda config --add channels conda-forge
-  - conda install -c conda-forge setuptools wheel conda-build anaconda-client conda-verify cython numpy=1.19.1 --yes --quiet
+  - conda install -c conda-forge setuptools wheel conda-build anaconda-client conda-verify cython numpy=1.19.1 coverage --yes --quiet
 
 build: off
 
 build_script:
-  # Build the Cython extension
-  - cmd: ECHO build_script here!
-  # - cmd: python setup.py build_ext --inplace
-
-test_script:
-  - cmd: ECHO tests here!
-  # Run the project tests and store results in .xml log
-  #  - ps: |
-  #      # this produces nosetests.xml which is uploaded on_finish
-  #      &$env:PYTHON\python setup.py nosetests --with-xunit
-  #      if ($LastExitCode -ne 0) { $host.SetShouldExit($LastExitCode) }
-
-after_test:
   - which python
   - python setup.py bdist_wheel -d pypi_dist clean --all
+  # - conda build --quiet -c conda-forge conda-recipe --output-folder conda_dist
+
+test_script:
+  # this produces nosetests.xml which is uploaded on_finish
+  - ps: |
+      &$env:PYTHON\python -m unittest tests.graph.test_basegraph
+      if ($LastExitCode -ne 0) { $host.SetShouldExit($LastExitCode) }
+  - coverage run -m unittest tests.graph.test_basegraph
+  - coverage xml
+
+after_test:
   - ps: "ls pypi_dist"
-  - conda build --quiet -c conda-forge conda-recipe --output-folder conda_dist
   - ps: "ls conda_dist"
+  - ps: "ls ."
 
 artifacts:
   - path: conda_dist\**\*.tar.bz2
