--- a/appveyor.yml
+++ b/appveyor.yml
@@ -68,11 +68,10 @@ build_script:
   # - conda build --quiet -c conda-forge conda-recipe --output-folder conda_dist
 
 test_script:
-  # this produces nosetests.xml which is uploaded on_finish
   - ps: |
-      python -m unittest tests.graph.test_basegraph
+      python -m unittest tests.graph.test_basegraph -s pagral
       if ($LastExitCode -ne 0) { $host.SetShouldExit($LastExitCode) }
-  - coverage run -m unittest tests.graph.test_basegraph
+  - coverage run -m unittest tests.graph.test_basegraph -s pagral
   - coverage xml
 
 after_test:
